# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh  setup.cfg  sonar.sh
alembic/versions/: d2fabf652415_create_users_table2.py
app/: database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py  settings.py  utils.py
app/models/: company.py  config.py  user.py
app/routers/: auth.py  game.py  test.py  users.py
app/schemas/: auth.py  response.py  user.py
app/schemas/game/: start.py
app/templates/: activation_email.html  userCreateConfirmation.html
app/utils/: auth.py  email.py  generators.py  response.py  tests.py
migrations/: env.py
migrations/versions/: 11ca0e278d03_update_users_table_second_time.py  2124939984e1_create_users_table.py  2ad578179d62_users_permission_table.py  37f7c18703a3_create_company_table_with_relation_to_.py  4640428c8190_users_permission_table.py  592b1d477068_add_activation_token_table.py  5a0c8d249bad_refactor_tables_to_use_singular_names.py  d2fabf652415_create_users_table2.py  e4ebb784181c_update_user_table.py  f16f67da7dea_init_tables.py
tests/: conftest.py  test_auth.py  test_game.py  test_main.py  test_test.py  test_users.py
