[project]
requires-python = '>=3.10'

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
quiet = true

[tool.isort]
profile = 'black'
py_version = 310
line_length = 120
lines_after_imports = 2

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ['app/']
relative_files = true
parallel = true
branch = true
